--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bundle/vim-less"]
 	path = bundle/vim-less
 	url = https://github.com/groenewege/vim-less
+[submodule "bundle/xcode-low-key-vim"]
+	path = bundle/xcode-low-key-vim
+	url = https://github.com/dgraham/xcode-low-key-vim.git
