--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bundle/ctrlp-py-matcher"]
 	path = bundle/ctrlp-py-matcher
 	url = https://github.com/FelikZ/ctrlp-py-matcher
+[submodule "bundle/vim-mustache"]
+	path = bundle/vim-mustache
+	url = https://github.com/mustache/vim-mustache-handlebars.git
