--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "bundle/vim-mustache"]
 	path = bundle/vim-mustache
 	url = https://github.com/mustache/vim-mustache-handlebars.git
+[submodule "bundle/vim-racer"]
+	path = bundle/vim-racer
+	url = https://github.com/racer-rust/vim-racer.git
