--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "pack/plugins/start/vim-clang-format"]
 	path = pack/plugins/start/vim-clang-format
 	url = https://github.com/rhysd/vim-clang-format
+[submodule "pack/plugins/start/vim-scores"]
+	path = pack/plugins/start/vim-scores
+	url = https://github.com/dgraham/vim-scores
