--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "pack/plugins/opt/nvim-lspconfig"]
 	path = pack/plugins/opt/nvim-lspconfig
 	url = https://github.com/neovim/nvim-lspconfig
+[submodule "pack/plugins/opt/nvim-treesitter-playground"]
+	path = pack/plugins/opt/nvim-treesitter-playground
+	url = https://github.com/nvim-treesitter/playground
