--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 [submodule "pack/plugins/start/vim-matchup"]
 	path = pack/plugins/start/vim-matchup
 	url = https://github.com/andymass/vim-matchup
+[submodule "pack/plugins/start/copilot.vim"]
+	path = pack/plugins/start/copilot.vim
+	url = https://github.com/github/copilot.vim
